--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,27 @@
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MainActivity">
+
 <RelativeLayout
     style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
+    <include
+        layout="@layout/activity_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/installApkBtn"
         android:layout_width="fill_parent"
@@ -51,10 +63,9 @@
         android:id="@+id/installModsBtn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:enabled="false"
         android:maxHeight="25dp"
         android:minHeight="25dp"
@@ -73,7 +84,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/installProgress"
         android:minHeight="15dp"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:typeface="normal"/>
 
     <FrameLayout
@@ -82,7 +93,8 @@
         android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView"
-        android:layout_above="@+id/linearLayout">
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentEnd="true">
 
         <org.askerov.dynamicgrid.DynamicGridView
             android:id="@+id/modsGrid"
@@ -99,14 +111,13 @@
         android:columnCount="3"
         android:rowCount="1"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <Button
             android:id="@+id/addBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:layout_column="0"
             android:layout_columnSpan="1"
             android:layout_columnWeight="1"
@@ -120,8 +131,6 @@
             android:id="@+id/rmBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
             android:layout_column="1"
             android:layout_columnSpan="1"
             android:layout_columnWeight="1"
@@ -135,8 +144,6 @@
             android:id="@+id/changeOrderButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:layout_column="2"
             android:layout_columnSpan="1"
             android:layout_columnWeight="1"
@@ -148,3 +155,18 @@
     </GridLayout>
 
 </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:clickable="true"
+        android:clipToPadding="false"
+        android:elevation="4dp"
+        android:fitsSystemWindows="true"
+        app:insetForeground="#4000"
+        app:menu="@menu/menu"
+        android:focusable="true" />
+
+</android.support.v4.widget.DrawerLayout>
