--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
 <RelativeLayout
     style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <include
-        layout="@layout/activity_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/installApkBtn"
         android:layout_width="fill_parent"
@@ -156,17 +153,9 @@
 
 </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_view"
+    <include
+        layout="@layout/activity_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:clickable="true"
-        android:clipToPadding="false"
-        android:elevation="4dp"
-        android:fitsSystemWindows="true"
-        app:insetForeground="#4000"
-        app:menu="@menu/menu"
-        android:focusable="true" />
+        android:layout_height="wrap_content" />
 
 </android.support.v4.widget.DrawerLayout>
