Fix minor bugs.
Add Open Source Licences Activity using WebWiew.
Add INTERNET permission.
Fix toolbar.
Fix navigation bar.
Change toolbar's color.

--- a/app/src/main/res/layout/app_bar_osl.xml
+++ b/app/src/main/res/layout/app_bar_osl.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_navigation" />
+    <include layout="@layout/content_osl" />
 
 </android.support.design.widget.CoordinatorLayout>
