--- a/app/src/main/res/values/mycolor.xml
+++ b/app/src/main/res/values/mycolor.xml
@@ -13,4 +13,5 @@
 <color name="drop_target_color2">#FFA99033</color>
 <color name="drop_target_enabled">#FF009933</color>
 <color name="drop_target_disabled">#FFdddddd</color>
+<color name="colorPrimary">#00897b</color>
 </resources>
