--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <Button
+        <!--Button
             android:id="@+id/installApkBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -35,8 +35,9 @@
             android:padding="10dp"
             android:singleLine="true"
             android:text="@string/btn_install"
-            android:textSize="15sp" />
+            android:textSize="15sp" /-->
 
+        <!--android:layout_below="@+id/installApkBtn"-->
         <ProgressBar
             android:id="@+id/installProgress"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
@@ -46,8 +47,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/installApkBtn"
-            android:elevation="0dp"
             android:indeterminate="false"
             android:max="100"
             android:maxHeight="10dp"
@@ -56,7 +55,7 @@
             android:progress="0"
             android:visibility="invisible" />
 
-        <Button
+        <!--Button
             android:id="@+id/installModsBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -69,7 +68,7 @@
             android:padding="10dp"
             android:singleLine="true"
             android:text="@string/btn_save"
-            android:textSize="15sp" />
+            android:textSize="15sp" /-->
 
         <TextView
             android:id="@+id/textView"
