--- a/app/src/main/res/layout/mod_item.xml
+++ b/app/src/main/res/layout/mod_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="30dp">
 
@@ -18,6 +19,7 @@
         android:clickable="false"
         android:singleLine="false"
         android:text="Mod Name"
-        android:textSize="16dp" />
+        android:textSize="16sp"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
