--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -4,33 +4,20 @@
     tools:showIn="navigation_view">
 
     <item
-        android:id="@+id/nav_osl"
-        android:icon="@drawable/ic_menu_camera"
-        android:title="OpenSourceLicences" />
+        android:id="@+id/nav_mod"
+        android:icon="@drawable/ic_description"
+        android:title="@string/nav_modlist" />
     <item
-        android:id="@+id/nav_gallery"
-        android:icon="@drawable/ic_menu_gallery"
-        android:title="Gallery" />
+        android:id="@+id/nav_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/action_settings" />
     <item
-        android:id="@+id/nav_slideshow"
-        android:icon="@drawable/ic_menu_slideshow"
-        android:title="Slideshow" />
+        android:id="@+id/nav_donate"
+        android:icon="@drawable/ic_donate"
+        android:title="@string/action_donate" />
     <item
-        android:id="@+id/nav_manage"
-        android:icon="@drawable/ic_menu_manage"
-        android:title="Tools" />
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+        android:id="@+id/nav_about"
+        android:icon="@drawable/ic_about"
+        android:title="@string/action_about" />
 
 </menu>
