--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,17 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-    <group android:checkableBehavior="single">
         <item
-            android:id="@+id/action_settings"
-            android:title="@string/action_settings" />
+            android:id="@+id/action_save"
+            android:title="@string/btn_save" />
         <item
-            android:id="@+id/action_donate"
-            android:title="@string/action_donate" />
-        <item
-            android:id="@+id/action_about"
-            android:orderInCategory="100"
-            android:title="@string/action_about"
-            app:showAsAction="never" />
-    </group>
+            android:id="@+id/action_install"
+            android:title="@string/btn_install" />
 </menu>
