--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -8,6 +8,10 @@
         android:icon="@drawable/ic_description"
         android:title="@string/nav_modlist" />
     <item
+        android:id="@+id/nav_download"
+        android:icon="@drawable/ic_download"
+        android:title="@string/nav_download" />
+    <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/ic_settings"
         android:title="@string/action_settings" />
