--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/ic_settings"
         android:title="@string/action_settings" />
     <item
-        android:id="@+id/nav_donate"
+        android:id="@+id/nav_support"
         android:icon="@drawable/ic_donate"
         android:title="@string/action_donate" />
     <item
